Update and rename utama.html to index.html

--- a/UTS-Pemweb-121140097/index.html
+++ b/UTS-Pemweb-121140097/index.html
@@ -12,7 +12,7 @@
             <a href="#">Halaman Utama</a>
         </div>
         <ul class="nav-menu">
-            <li class="nav-item"><a href="utama.html">Halaman</a>
+            <li class="nav-item"><a href="index.html">Halaman</a>
             </li>
             <li class="nav-item"><a href="form.html">Formulir</a>
             </li>
