--- a/UTS-Pemweb-121140097/formulir.html
+++ b/UTS-Pemweb-121140097/formulir.html
@@ -13,7 +13,7 @@
             <a href="#">Formulir</a>
         </div>
         <ul class="nav-menu">
-            <li><a href="utama.html">Halaman</a></li>
+            <li><a href="index.html">Halaman</a></li>
             <li><a href="formulir.html">Formulir</a></li>
             <li><a href="tabel.html">Tabel</a></li>
         </ul>
