--- a/UTS-Pemweb-121140097/tabel.html
+++ b/UTS-Pemweb-121140097/tabel.html
@@ -12,7 +12,7 @@
             <a href="#">Tabel</a>
         </div>
         <ul class="nav-menu">
-            <li><a href="utama.html">Halaman</a></li>
+            <li><a href="index.html">Halaman</a></li>
             <li><a href="form.html">Formulir</a></li>
             <li><a href="tabel.html">Tabel</a></li>
         </ul>
